--- a/index.qmd
+++ b/index.qmd
@@ -7,12 +7,12 @@ about:
   image-shape: round
   image-width: 20em
   links:
-    - text: LinkedIn
-      href: https://www.linkedin.com/in/mojtaba-masoudinejad/
-    - text: GitHub
-      href: https://github.com/masoudinejad
-    - text: Email
+    - icon: envelope-at-fill
       href: mailto:masoudinejad@gmail.com
+    - icon: linkedin
+      href: https://www.linkedin.com/in/mojtaba-masoudinejad/
+    - icon: github
+      href: https://github.com/masoudinejad
 ---
 
-Mojtaba Masoudinejad is a senior Machine Learning Engineer at Bosch Center for Artificial Intelligence (BCAI) at Robert Bosch GmbH.
+Mojtaba Masoudinejad (Farsi: مجتبی مسعودی نژاد) is a senior Machine Learning Engineer at Bosch Center for Artificial Intelligence (BCAI) at Robert Bosch GmbH.
