--- a/publications.qmd
+++ b/publications.qmd
@@ -12,7 +12,7 @@ title: "Publications"
 * M. Masoudinejad; "[Large Signal Converter Data from Texas Instruments BQ25570](https://doi.org/10.17877/fd72wij6yo)" dataset in SFB876 TU Dortmund University; Dortmund, Germany; 2018.
 * M. Masoudinejad; "[Large Signal Converter Data from Texas Instruments BQ25505](https://doi.org/10.17877/fd72o6mn0g)" dataset in SFB876 TU Dortmund University; Dortmund, Germany; 2018.
 * M. Masoudinejad; "[Models and training datasets for Texas Instruments BQ25505 and BQ25570 ICs](https://doi.org/10.17877/FE0O0YSXS0)" dataset in SFB876, TU Dortmund University; Dortmund, Germany; 2018.
-* M. Masoudinejad; "[Power analysis of PhyNode]()" in 2018 Annual Technical Reports of SFB876; TU Dortmund University; Dortmund, Germany; 2018.
+* M. Masoudinejad; "[Power analysis of PhyNode](files/TechReport2018.pdf)" in 2018 Annual Technical Reports of SFB876; TU Dortmund University; Dortmund, Germany; 2018.
 * M. Masoudinejad et al. “[Machine Learning Based Indoor Localisation Using Environmental Data in PhyNetLab Warehouse](https://ieeexplore.ieee.org/abstract/document/8435922)” in proceedings of European Conference on Smart Objects, Systems and Technologies (Smart SysTech), pp. 1–8; 2018.
 * M. Masoudinejad; "[Data Collection for Modelling Power Chargers in Energy Harvesting]()" in 2017 Annual Technical Reports of SFB876; TU Dortmund University; Dortmund, Germany; 2017.
 * R. Falkenberg et al.; “[PhyNetLab: An IoT-based warehouse testbed](https://annals-csis.org/proceedings/2017/drp/pdf/267.pdf)” in proceedings of Federated Conference on Computer Science and Information Systems (FedCSIS), pp. 1051–1055; 2017.
