fix publication links

--- a/publications.qmd
+++ b/publications.qmd
@@ -20,7 +20,7 @@ title: "Publications"
 * M. Masoudinejad; "[A Power Model for DC-DC Boost Converters Operating in PFM Mode](https://sfb876.tu-dortmund.de/PublicPublicationFiles/masoudinejad_2017a.pdf)" Technical Report in SFB876;  TU Dortmund University; Dortmund, Germany; 2017.
 * M. Masoudinejad et al.; “[Smart Sensing Devices for Logistics Application](https://doi.org/10.1007/978-3-319-61563-9_4)” in Sensor Systems and Software. Vol. 205. Springer International Publishing, pp. 41–52. ISBN: 978-3-319-61562-2 978-3-319-61563-9; 2017
 * M. Masoudinejad; "[Photovoltaic Energy Harvesting Characteristics under Ultra-Low Light](https://sfb876.tu-dortmund.de/PublicPublicationFiles/sfbgk_etal_2016a.pdf)" in 2016 Annual Technical Reports of SFB876, pp.41-44; TU Dortmund University, Dortmund, Germany; 2016.
-* S. Feldhorst et al.; “[Motion classification for analyzing the order picking process using mobile sensors](https://sfb876.tu-dortmund.de/PublicPublicationFiles/masoudinejad_2017b.pdf)” in proceedings of the 5th international conference on pattern recognition applications and methods. SCITEPRESS-Science and Technology Publications, Lda, pp. 706–713. ISBN: 978-989-758-173-1; 2016.
+* S. Feldhorst et al.; “[Motion classification for analyzing the order picking process using mobile sensors](https://doi.org/10.5220/0005828407060713)” in proceedings of the 5th international conference on pattern recognition applications and methods. SCITEPRESS-Science and Technology Publications, Lda, pp. 706–713. ISBN: 978-989-758-173-1; 2016.
 * M. Masoudinejad et al.; “[A gray box modeling of a photovoltaic cell under low illumination in materials handling application](https://doi.org/10.1109/IRSEC.2015.7455081)” in proceedings of IEEE 3rd International Renewable and Sustainable Energy Conference (IRSEC), pp. 1–6; 2015.
 * M. Masoudinejad; "[A Measurement Platform for Photovoltaic Energy Harvesting in Indoor Low Light Environment](files/TechReport2015.pdf)" in 2015 Annual Technical Reports of SFB876; TU Dortmund University, Dortmund, Germany; 2015.
 * M. Masoudinejad et al.; “[A measurement platform for photovoltaic performance analysis in environments with ultra-low energy harvesting potential](https://doi.org/10.1016/j.scs.2015.09.006)” in journal of Sustainable Cities and Society 25, pp. 74–81. ISSN: 22106707; 2015.
